--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
 * {
   margin: 0;
   padding: 0;
+
   box-sizing: border-box;
+}
+button {
+  font: inherit;
+  border: none;
+  background: transparent;
+  cursor: pointer;
 }
 
 html {
